feat: Major improvements for production-ready SamairaAI
- Fixed repeated self-introductions issue (LLM no longer re-introduces after turn 1)
- Added postprocess.py for response cleaning and intro stripping
- Improved Hinglish transcription with hallucination filtering
- Added faster-whisper ASR service for low-latency transcription
- Added WebRTC VAD service for voice activity detection
- Implemented real-time WebSocket voice streaming pipeline
- Added session persistence across server restarts
- Enhanced microphone error handling with user-friendly messages
- Added IMPLEMENTATION_SUMMARY.md and MICROPHONE_TROUBLESHOOTING.md
- Updated system prompt to prevent re-introductions
- Added real-time voice UI components and styling
- Updated requirements.txt with new dependencies

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -191,5 +191,6 @@
 
     <script src="/static/app.js"></script>
     <script src="/static/voice.js"></script>
+    <script src="/static/voice-realtime.js"></script>
 </body>
 </html>
